# present_value_scenario

./: .gitignore  README.md  app.py  architecture.d2  fam1.py  hello.py  monte-carlo-career-model.py  parameter-space-analysis.py  probabilistic-career-model.py  pyproject.toml
examples/: monte_carlo_example.py  parameter_space_example.py  probabilistic_example.py  simple_financial_model.py
src/analysis/: base.py  distributions.py  metrics.py  monte_carlo.py  parameter_space.py  plots.py  probabilistic.py  risk.py
src/core/: career_model.py  career_model_params.py
src/utils/: plot_utils.py  utils.py
tests/: test_career_model.py  test_monte_carlo.py
